# aidlux_work

./: Readme.md  硬件清单.xlsx
AI_part/: readme.md
AI_part/FAQ/: LLM和RAG服务本地部署流程.md  lidar和串口设备规则.md  root用户使用rqt.md  固定音响声音值.md  知识库单行格式.txt  视觉和AI部分pkg说明.md  遇见问题和解决方法.md
AI_part/robot_core/: package.xml  setup.py
AI_part/voice_interaction/: package.xml  setup.cfg  setup.py
DHT11/: readme.txt
DHT11/Output/: atk_h743.hex  startup_stm32h743xx.lst
Dialog-models-and-plugins/: AI.py  JustRun.py  README.md  Water.py  car_control.py  data_publisher.py  get_stm32_msg.py  move.py  ros_listener.py  test.py  wakeup_test.py
FreeRTOS全+电机正反向控制测速/: .mxproject  test_us.ioc
FreeRTOS全+电机正反向控制测速/MDK-ARM/: ble.c  ble.h  delay.c  ds18b20.h  oled.h  serial_command.h  startup_stm32f407xx.lst
camera_start_python_封装/: package.xml
hx711/: .mxproject  hx711.ioc
lcd/: lcd.ioc
motor/MDK-ARM/: motor.uvguix.panan  motor.uvoptx  motor.uvprojx  startup_stm32f407xx.lst
ros_navigation/: README.md
ros_navigation/daohang/: CMakeLists.txt  package.xml
ros_navigation/daohang_tuozhan/: renti_genzhong.py  yvying_jiaohu_daohang.py
ros_navigation/driver_node/: package.xml  readme.MD  setup.cfg  setup.py
ros_navigation/duodian/: package.xml  (+2 more)
sensor_test_final/: .mxproject
vision_part/: README.md
vision_part/yolov5/cpp/: CMakeLists.txt  Readme.txt  qnn_yolov5_multi.cpp
word_wake_up/: readme.md
yolov5_check/: package.xml  setup.py
yolov5_check_封装/: setup.cfg
嵌入式部分/: ProPrj_阿加犀_2025-08-19.epro  readme.md
手搓部分/: readme.md  手搓文档.md
结构/: 上层支撑结构.SLDASM  中层结构装配.SLDASM
(+782 files in other folders)
